US#2-Task#14 made the workspace scrollable

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -15,7 +15,7 @@
                 Widgets
 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" style = "overflow: scroll;">
                 Workspace
             </div>
             <div class="col-md-3">
