US#1 Task#13 add js file in html

--- a/home/index.html
+++ b/home/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+        
 <body>
+  <script type="text/javascript" src="js/index.js"></script>
   <h1 align ="left">Learning Math is Fun!</h1>
   <table align="center">
   <tr> <th> <h3>Select your grade</h3> </th> </tr>
-  <tr> <td align="center"><button type="button" style="background-color:powderblue;">1st Grade Student</button></td></tr>
- <tr> <td align="center"> <button type="button" style="background-color:powderblue;">6th Grade Student</button></td> </tr>
-  <tr><td align="center"><button type="button" style="background-color:powderblue;">9th Grade Student</button></td></tr>
+  <tr> <td align="center"><button type="button" style="background-color:powderblue;" id="Grade1" onclick="OpenWorkspace()">1st Grade Student</button></td></tr>
+ <tr> <td align="center"> <button type="button" style="background-color:powderblue;" id="Grade6" onclick="">6th Grade Student</button></td> </tr>
+  <tr><td align="center"><button type="button" style="background-color:powderblue;" id="Grade9" onclick="">9th Grade Student</button></td></tr>
 </table>
 
 </body>
