--- a/workspace/index.html
+++ b/workspace/index.html
@@ -18,7 +18,7 @@
             <div class="col-md-3" style = "overflow: scroll;">
                 Workspace
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3" style = "overflow: scroll;">
                 Result
             </div>
             <div class="col-md-3">
