--- a/workspace/index.html
+++ b/workspace/index.html
@@ -15,11 +15,16 @@
                 Widgets
                 <p>Numbers</p><br>
               <div class="button">
-              <p>Operators</p><br>
-              <input type="button" id="addition" value="+"> &nbsp; &nbsp;
-              <input type="button" id="subtraction" value="-"> &nbsp; &nbsp;
-              <input type="button" id="multiplication" value="*"> &nbsp; &nbsp;
-              <input type="button" id="division" value="/"> &nbsp; &nbsp;
+              <input type="button" id="number1" value="1"> &nbsp; &nbsp;
+              <input type="button" id="number2" value="2"> &nbsp; &nbsp;
+              <input type="button" id="number3" value="3"> &nbsp; &nbsp;
+              <input type="button" id="number4" value="4"> &nbsp; &nbsp;
+              <input type="button" id="number5" value="5"> &nbsp; &nbsp;
+              <input type="button" id="number6" value="6"> &nbsp; &nbsp;
+              <input type="button" id="number7" value="7"> &nbsp; &nbsp;
+              <input type="button" id="number8" value="8"> &nbsp; &nbsp;
+              <input type="button" id="number9" value="9"> &nbsp; &nbsp;
+              <input type="button" id="number0" value="0">  <br>
             </div>
             </div>
             <div class="col-md-3" style = "overflow: scroll;">
