US#5 Task#20 added operators to the widget subsection.

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -13,7 +13,13 @@
 
             <div class="col-md-3">
                 Widgets
-
+             <div class="button">
+              <p>Operators</p><br>
+              <input type="button" id="addition" value="+"> &nbsp; &nbsp;
+              <input type="button" id="subtraction" value="-"> &nbsp; &nbsp;
+              <input type="button" id="multiplication" value="*"> &nbsp; &nbsp;
+              <input type="button" id="division" value="/"> &nbsp; &nbsp;
+             </div>
             </div>
             <div class="col-md-3" style = "overflow: scroll;">
                 Workspace
