--- a/workspace/index.html
+++ b/workspace/index.html
@@ -3,7 +3,7 @@
 <head></head>
 
 <body>
-  <script type="text/javascript" src="widgets/js/index.js"></script>
+    <script type="text/javascript" src="widgets/js/index.js"></script>
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
             SER 515 - Team 18
@@ -17,23 +17,23 @@
 
              <div class="button">
               <p>Operators</p><br>
-              <input type="button" id="addition" value="+" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
-              <input type="button" id="subtraction" value="-" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
-              <input type="button" id="multiplication" value="*" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
-              <input type="button" id="division" value="/" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="addition" value="+"> &nbsp; &nbsp;
+              <input type="button" id="subtraction" value="-"> &nbsp; &nbsp;
+              <input type="button" id="multiplication" value="*"> &nbsp; &nbsp;
+              <input type="button" id="division" value="/"> &nbsp; &nbsp;
              </div>
               <div class="button">
-              <p>Numbers</p><br>
-              <input type="button" id="number1" value="1"> &nbsp; &nbsp;
-              <input type="button" id="number2" value="2"> &nbsp; &nbsp;
-              <input type="button" id="number3" value="3"> &nbsp; &nbsp;
-              <input type="button" id="number4" value="4"> &nbsp; &nbsp;
-              <input type="button" id="number5" value="5"> &nbsp; &nbsp;
-              <input type="button" id="number6" value="6"> &nbsp; &nbsp;
-              <input type="button" id="number7" value="7"> &nbsp; &nbsp;
-              <input type="button" id="number8" value="8"> &nbsp; &nbsp;
-              <input type="button" id="number9" value="9"> &nbsp; &nbsp;
-              <input type="button" id="number0" value="0">  <br>
+                    <p>Numbers</p><br>
+              <input type="button" id="number1" value="1" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number2" value="2" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number3" value="3" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number4" value="4" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number5" value="5" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number6" value="6" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number7" value="7" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number8" value="8" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number9" value="9" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="number0" value="0" onclick="addvalueToWorkSpace(this.id)">  <br>
             </div>
             </div>
 
