--- a/workspace/index.html
+++ b/workspace/index.html
@@ -3,7 +3,9 @@
 <head></head>
 
 <body>
-    <script type="text/javascript" src="widgets/js/index.js"></script>
+	<script type="text/javascript" src="widgets/js/index.js"></script>
+	<script type="text/javascript" src="main/js/index.js"></script>
+
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
             SER 515 - Team 18
@@ -15,13 +17,14 @@
             <div class="col-md-3" style = "overflow: scroll;">
                 Widgets
 
-             <div class="button">
+              <div class="button">
               <p>Operators</p><br>
-              <input type="button" id="addition" value="+"> &nbsp; &nbsp;
-              <input type="button" id="subtraction" value="-"> &nbsp; &nbsp;
-              <input type="button" id="multiplication" value="*"> &nbsp; &nbsp;
-              <input type="button" id="division" value="/"> &nbsp; &nbsp;
+              <input type="button" id="addition" value="+" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="subtraction" value="-" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="multiplication" value="*" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
+              <input type="button" id="division" value="/" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
              </div>
+
               <div class="button">
                     <p>Numbers</p><br>
               <input type="button" id="number1" value="1" onclick="addvalueToWorkSpace(this.id)"> &nbsp; &nbsp;
@@ -65,6 +68,7 @@
 </style>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="../lib/js/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
