--- a/workspace/index.html
+++ b/workspace/index.html
@@ -3,8 +3,6 @@
 <head></head>
 
 <body>
-	<script type="text/javascript" src="widgets/js/index.js"></script>
-	<script type="text/javascript" src="main/js/index.js"></script>
 
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
@@ -40,12 +38,13 @@
             </div>
             </div>
 
-            <div class="col-md-3" style = "overflow: scroll;">
+            <div class="col-md-3 mainSection" style = "overflow: scroll;">
                 Workspace
                 <p align="center" id="workspace"> </p>
             </div>
             <div class="col-md-3" style = "overflow: scroll;">
                 Result
+                <div id="mathResult"></div>
             </div>
             <div class="col-md-3">
                 History
@@ -72,3 +71,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+	<script type="text/javascript" src="main/js/index.js"></script>
+	<script type="text/javascript" src="widgets/js/index.js"></script>
+	<script type="text/javascript" src="result/js/index.js"></script>
+x
