US#1-Task#12 Addedbuttons to Modal

--- a/home/index.html
+++ b/home/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+        
+<body>
+  <script type="text/javascript" src="js/index.js"></script>
+  <h1 align ="left">Learning Math is Fun!</h1>
+  <table align="center">
+  <tr> <th> <h3>Select your grade</h3> </th> </tr>
+  <tr> <td align="center"><button type="button" style="background-color:powderblue;" id="Grade1" onclick="OpenGrade1Workspace()">1st Grade Student</button></td></tr>
+ <tr> <td align="center"> <button type="button" style="background-color:powderblue;" id="Grade6" onclick="OpenGrade6Workspace()">6th Grade Student</button></td> </tr>
+  <tr><td align="center"><button type="button" style="background-color:powderblue;" id="Grade9" onclick="OpenGrade9Workspace()">9th Grade Student</button></td></tr>
+</table>
 
+</body>
+</html>
