--- a/home/register.html
+++ b/home/register.html
@@ -6,6 +6,9 @@
   <h1 align ="left">Learning Math is Fun!</h1>
 
 <form accept-charset="UTF-8"  onsubmit="OpenGrade1Workspace()">
+    <div>
+        <h1>Registration Form</h1>
+    </div>
   <div>
     <label for="Email">Email</label>
     <div>
@@ -15,9 +18,15 @@
   <div>
     <label for="Password">Password</label>
     <div>
-      <input type="password" id="Password" placeholder="Password">
+      <input type="password" id="Password" placeholder="Password" required>
     </div>
   </div>
+  <div>
+        <label for="Password">Confirm Password</label>
+        <div>
+          <input type="password" id="Password" placeholder="Password" required>
+        </div>
+      </div>
   <div>
       <label for="selectbox">Choose Your Grade</label>
       <div>
@@ -30,13 +39,9 @@
 </div>
   <div>
     <div>
-      <button type="submit">Login</button>
-      <button type="button" onclick="LoadRegistrationForm()">Register</button>
+      <button type="submit">Register</button>
     </div>
-    <div>
-      
-    </div>
-  </div>
+   </div>
 </form>
 </body>
 </html>
