--- a/workspace/index.html
+++ b/workspace/index.html
@@ -70,7 +70,20 @@
                         </div>
                         <div class="col-1">
                             <input type="button" id="number0" value="0" onclick="addvalueToWorkSpace(this.id)">
+                            &nbsp;
+                        </div>
+                    </div>
+                </div>
 
+                <div id="grade6">
+                    <p>Brackets</p>
+                    <div class="row">
+                        
+                        <div class="col-1">
+                            <input type="button" id="openBracket" value="(" > &nbsp;
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="closedBracket" value=")"> 
                         </div>
                     </div>
                 </div>
