US#43-Task#56 add BODMAS expression to workspace

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -80,10 +80,10 @@
                     <div class="row">
                         
                         <div class="col-1">
-                            <input type="button" id="openBracket" value="(" > &nbsp;
+                            <input type="button" id="openBracket" value="(" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
                         </div>
                         <div class="col-1">
-                            <input type="button" id="closedBracket" value=")"> 
+                            <input type="button" id="closedBracket" value=")" onclick="addvalueToWorkSpace(this.id)"> 
                         </div>
                     </div>
                 </div>
