--- a/workspace/index.html
+++ b/workspace/index.html
@@ -24,16 +24,16 @@
                     <div class="row">
                         
                         <div class="col-1">
-                            <input type="button" id="addition" value="+" onclick="addvalueToWorkSpace(this.id)" draggable="true"> &nbsp;
+                            <input type="button" id="addition" value="+" onclick="addvalueToWorkSpace(this.id)" > &nbsp;
                         </div>
                         <div class="col-1">
-                            <input type="button" id="subtraction" value="-" onclick="addvalueToWorkSpace(this.id)" draggable="true">
+                            <input type="button" id="subtraction" value="-" onclick="addvalueToWorkSpace(this.id)" >
                         </div>
                         <div class="col-1">
-                            <input type="button" id="multiplication" value="*" onclick="addvalueToWorkSpace(this.id)" draggable="true">
+                            <input type="button" id="multiplication" value="*" onclick="addvalueToWorkSpace(this.id)" >
                         </div>
                         <div class="col-1">
-                            <input type="button" id="division" value="/" onclick="addvalueToWorkSpace(this.id)" draggable="true"> &nbsp;
+                            <input type="button" id="division" value="/" onclick="addvalueToWorkSpace(this.id)" > &nbsp;
                         </div>
                     </div>
                 </div>
