US#44-Task#59 added variables to workspace

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -91,82 +91,82 @@
                     <p>Variables</p>
                     <div class="row">
                         <div class="col-1">
-                            <input type="button" id="alphabet-a" value="a" >
+                            <input type="button" id="alphabet-a" value="a" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-b" value="b" >
+                            <input type="button" id="alphabet-b" value="b" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-c" value="c" >
+                            <input type="button" id="alphabet-c" value="c" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-d" value="d" >
+                            <input type="button" id="alphabet-d" value="d" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-e" value="e" >
+                            <input type="button" id="alphabet-e" value="e" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-f" value="f" >
+                            <input type="button" id="alphabet-f" value="f" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-g" value="g" >
+                            <input type="button" id="alphabet-g" value="g" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-h" value="h" >
+                            <input type="button" id="alphabet-h" value="h" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-i" value="i" >
+                            <input type="button" id="alphabet-i" value="i" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-j" value="j" >
+                            <input type="button" id="alphabet-j" value="j" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-k" value="k" >
+                            <input type="button" id="alphabet-k" value="k" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-l" value="l" >
+                            <input type="button" id="alphabet-l" value="l" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-m" value="m" >
+                            <input type="button" id="alphabet-m" value="m" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-n" value="n" >
+                            <input type="button" id="alphabet-n" value="n" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-o" value="o" >
+                            <input type="button" id="alphabet-o" value="o" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-p" value="p" >
+                            <input type="button" id="alphabet-p" value="p" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-q" value="q" >
+                            <input type="button" id="alphabet-q" value="q" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-r" value="r" >
+                            <input type="button" id="alphabet-r" value="r" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-s" value="s" >
+                            <input type="button" id="alphabet-s" value="s" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-t" value="t" >
+                            <input type="button" id="alphabet-t" value="t" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-u" value="u" >
+                            <input type="button" id="alphabet-u" value="u" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-v" value="v" >
+                            <input type="button" id="alphabet-v" value="v" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-w" value="w" >
+                            <input type="button" id="alphabet-w" value="w" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-x" value="x" >
+                            <input type="button" id="alphabet-x" value="x" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-y" value="y" >
+                            <input type="button" id="alphabet-y" value="y" onclick="addvalueToWorkSpace(this.id)">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-z" value="z" >
+                            <input type="button" id="alphabet-z" value="z" onclick="addvalueToWorkSpace(this.id)">
                             &nbsp;
                         </div>
                     </div>
