US#44-Task#50 added variables to widgets

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -76,14 +76,98 @@
                 </div>
 
                 <div id="grade6">
-                    <p>Brackets</p>
+                    <p>Paranthesis</p>
                     <div class="row">
                         
                         <div class="col-1">
-                            <input type="button" id="openBracket" value="(" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
+                            <input type="button" id="left_Paranthesis" value="(" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
                         </div>
                         <div class="col-1">
-                            <input type="button" id="closedBracket" value=")" onclick="addvalueToWorkSpace(this.id)"> 
+                            <input type="button" id="right_paranthesis" value=")" onclick="addvalueToWorkSpace(this.id)"> 
+                        </div>
+                    </div>
+                </div>
+                <div id="grade9">
+                    <p>Variables</p>
+                    <div class="row">
+                        <div class="col-1">
+                            <input type="button" id="alphabet-a" value="a" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-b" value="b" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-c" value="c" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-d" value="d" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-e" value="e" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-f" value="f" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-g" value="g" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-h" value="h" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-i" value="i" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-j" value="j" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-k" value="k" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-l" value="l" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-m" value="m" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-n" value="n" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-o" value="o" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-p" value="p" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-q" value="q" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-r" value="r" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-s" value="s" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-t" value="t" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-u" value="u" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-v" value="v" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-w" value="w" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-x" value="x" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-y" value="y" >
+                        </div>
+                        <div class="col-1">
+                            <input type="button" id="alphabet-z" value="z" >
+                            &nbsp;
                         </div>
                     </div>
                 </div>
