US#4 task#54 Made changes in html and added loadHistory function

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -101,10 +101,14 @@
                 </div> 
                 <div id="mathResult"></div>
             </div>
-            <div class="col-md-3 ">
+            <div class="col-md-3 historySection">
                 <div class="row navbar">
                     <div class="col">History</div>
                 </div> 
+                <div id="widgetActivity">
+                    <p align="center" id="activity"> </p>
+                </div>
+                
             </div>
         </div>
     </div>
