US#4 Task#54 Added loadHistory method

--- a/workspace/index.html
+++ b/workspace/index.html
@@ -105,9 +105,7 @@
                 <div class="row navbar">
                     <div class="col">History</div>
                 </div> 
-                <div id="widgetActivity">
-                    <p align="center" id="activity"> </p>
-                </div>
+                <div id="widgetActivity"></div>
                 
             </div>
         </div>
@@ -121,3 +119,4 @@
 <script type="text/javascript" src="widgets/js/index.js"></script>
 <script type="text/javascript" src="main/js/index.js"></script>
 <script type="text/javascript" src="result/js/index.js"></script>
+<script type="text/javascript" src="history/js/index.js"></script>
