--- a/workspace/index.html
+++ b/workspace/index.html
@@ -19,7 +19,7 @@
                     <div class="col">Widgets</div>
                 </div>
 
-                <div>
+                <div id=Operators>
                     <p>Operators</p>
                     <div class="row">
                         
@@ -38,7 +38,7 @@
                     </div>
                 </div>
 
-                <div>
+                <div id=Numbers>
                     <p>Numbers</p>
                     <div class="row">
                         <div class="col-1">
@@ -77,7 +77,7 @@
 
                 <div id="grade6">
                     <p>Brackets</p>
-                    <div class="row">
+                    <div class="row" id=Brackets>
                         
                         <div class="col-1">
                             <input type="button" id="openBracket" value="(" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
