--- a/workspace/index.html
+++ b/workspace/index.html
@@ -78,10 +78,10 @@
                     <div class="row">
                         
                         <div class="col-1">
-                            <input type="button" id="left_Paranthesis" value="(" onclick="addvalueToWorkSpace(this.id)"> &nbsp;
+                            <input type="button" id="left_Paranthesis" value="(" onclick="addvalueToWorkSpace(this.id)" draggable="true"> &nbsp;
                         </div>
                         <div class="col-1">
-                            <input type="button" id="right_paranthesis" value=")" onclick="addvalueToWorkSpace(this.id)"> 
+                            <input type="button" id="right_paranthesis" value=")" onclick="addvalueToWorkSpace(this.id)" draggable="true"> 
                         </div>
                     </div>
                 </div>
@@ -89,82 +89,85 @@
                     <p>Variables</p>
                     <div class="row">
                         <div class="col-1">
-                            <input type="button" id="alphabet-a" value="a" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-a" value="a" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-b" value="b" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-b" value="b" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-c" value="c" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-c" value="c" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-d" value="d" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-d" value="d" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-e" value="e" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-e" value="e" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-f" value="f" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-f" value="f" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-g" value="g" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-g" value="g" onclick="addvalueToWorkSpace(this.id)" draggable="true">
+                        </div>
+                        <div class="col-1"> 
+                            <input type="button" id="alphabet-h" value="h" onclick="addvalueToWorkSpace(this.id)" 
+                            draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-h" value="h" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-i" value="i" onclick="addvalueToWorkSpace(this.id)" 
+                            draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-i" value="i" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-j" value="j" onclick="addvalueToWorkSpace(this.id)" 
+                            draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-j" value="j" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-k" value="k" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-k" value="k" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-l" value="l" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-l" value="l" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-m" value="m" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-m" value="m" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-n" value="n" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-n" value="n" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-o" value="o" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-o" value="o" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-p" value="p" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-p" value="p" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-q" value="q" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-q" value="q" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-r" value="r" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-r" value="r" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-s" value="s" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-s" value="s" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-t" value="t" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-t" value="t" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-u" value="u" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-u" value="u" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-v" value="v" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-v" value="v" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-w" value="w" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-w" value="w" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-x" value="x" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-x" value="x" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-y" value="y" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                         </div>
                         <div class="col-1">
-                            <input type="button" id="alphabet-y" value="y" onclick="addvalueToWorkSpace(this.id)">
-                        </div>
-                        <div class="col-1">
-                            <input type="button" id="alphabet-z" value="z" onclick="addvalueToWorkSpace(this.id)">
+                            <input type="button" id="alphabet-z" value="z" onclick="addvalueToWorkSpace(this.id)" draggable="true">
                             &nbsp;
                         </div>
                     </div>
