--- a/workspace/index.html
+++ b/workspace/index.html
@@ -286,7 +286,8 @@
 </html>
 
 <script src="../lib/js/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 <script src="../lib/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="widgets/js/index.js"></script>
 <script type="text/javascript" src="main/js/index.js"></script>
